fixed bugs, improved code, added pinia and added loading component

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -10,24 +10,29 @@
 // 	background-color: var(--bg-color1);
 // 	color: var(--font-color);
 // }
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 
 * {
 	margin: 0;
 }
 a {
 	text-decoration: none;
+	color: $white;
 }
 li {
 	list-style: none;
 }
 body {
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter", sans-serif;
+	background-color: $dark;
+	color: $white;
 }
 div {
 	box-sizing: border-box;
 }
-body, html, #__nuxt {
+body,
+html,
+#__nuxt {
 	height: 100%;
 }
 .container {
