--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -1,8 +1,10 @@
-$dark: #263238;
+$dark: #323232;
 $gray: #979797;
 $dark_gray: #5c6266;
 $light: #f0f0f0;
 $white: #ffffff;
+$orange: #fb5a12;
+$orange_red: #c92201;
 
 // ------------------------------------- //
 
