--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -1,9 +1,13 @@
-$dark: #323232;
-$gray: #979797;
-$dark_gray: #5c6266;
+$dark: #121829;
+$light_dark: #20283e;
+$gray: #a8aebf;
+$light_gray: #c3c8d4;
+$dark_gray: #475069;
+$blue_gray: #8e95a9;
 $light: #f0f0f0;
-$white: #ffffff;
-$orange: #fb5a12;
+$white: #ebeef5;
+$primary: #7b6ef6;
+$orange: #ffad49;
 $orange_red: #c92201;
 
 // ------------------------------------- //
